<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">eID for Android</string>
    <string name="read">Read</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="certificate_prompt">Choose a certificate</string>
    <string-array name="certificate_array">
        <item>Authentication Certificate</item>
        <item>Signature Certificate</item>
        <item>Citizen CA Certificate</item>
        <item>Root CA Certificate</item>
        <item>RNN Certificate</item>
    </string-array>
    <string name="owner">Owner:</string>
    <string name="version">Version:</string>
    <string name="CA">Authority:</string>
    <string name="type">Type:</string>
    <string name="certificate_validity">Validity:</string>
    <string name="use">Use:</string>
    <string name="publickeylength">Key Length:</string>
    <string name="card_data">Card data:</string>
    <string name="your_path">Please give the path in the SDcard:</string>
    <string name="test_pin">Test PIN</string>
    <string name="change_pin">Change PIN</string>
    <string-array name="your_pin">
        <item>Your PIN code:</item>
        <item>Your old PIN:</item>
        <item>Choose new PIN:</item>
        <item>Repeat new PIN:</item>
        <item>Your PIN code:</item>
    </string-array>
    <string name="functionalities">Card functionalities:</string>
    <string name="sign_data">Sign a File</string>
    <string name="authenticate">Authenticate</string>
    <string name="verify_data">Verify data signed by this person:</string>
    <string name="verify">Verify</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
