<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/certificates_view">
    
    <TextView
        android:id="@+id/blank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip"
        android:paddingTop="5dip"
    />
        
        
    <TextView
    	android:id="@+id/choose_certificates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_toRightOf="@id/blank"
        android:layout_alignBottom="@id/blank"
        android:width="300dip"
        android:textColor="#000"
        android:text="@string/certificate_prompt"
    />
    <Spinner 
        android:id="@+id/certificates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_certificates"
        android:layout_alignLeft="@+id/choose_certificates"
        android:minWidth="250dip"
        android:prompt="@string/certificate_prompt"
    />
    
    <Button
        android:id="@+id/save_certificate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/certificates"
        android:layout_alignBottom="@+id/certificates"
        android:layout_marginLeft="140dip"
        android:width="80dip"
        android:gravity="center"
        android:textColor="#000"
        android:text="@string/save"
    />
    
    
    <View
        android:id="@+id/line"
        android:layout_height="2dip"
        android:background="#FF909090"
        android:layout_width="fill_parent"
        android:layout_below="@+id/certificates"
    /> 
    
    
    <TextView
    	android:id="@+id/owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_below="@id/line"
        android:layout_alignLeft="@+id/choose_certificates"
        android:width="90dip"
        android:textColor="#FF909090"
        android:text="@string/owner"
    />
    <TextView
    	android:id="@+id/owner_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/owner"
        android:layout_alignTop="@+id/owner"
        android:layout_marginLeft="5dip" 
        android:lines="2"       
        android:width="170dip"
        android:textSize="12sp"
        android:textColor="#000"
        android:textStyle="bold"
    />
    <TextView
    	android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/owner_value"
        android:layout_alignTop="@+id/owner_value"
        android:layout_marginLeft="30dip"
        android:width="70dip"
        android:textColor="#FF909090"
        android:text="@string/version"
    />
    <TextView
    	android:id="@+id/version_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/version"
        android:layout_alignTop="@+id/version"
        android:layout_marginLeft="5dip"
        android:width="100dip"
        android:lines="2"
        android:textSize="12sp"
        android:textColor="#000"
        android:textStyle="bold"
    />
    
    
    <TextView
    	android:id="@+id/CA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_below="@id/owner_value"
        android:layout_alignLeft="@+id/owner"
        android:width="90dip"
        android:textColor="#FF909090"
        android:text="@string/CA"
    />
    <TextView
    	android:id="@+id/CA_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/CA"
        android:layout_alignBottom="@+id/CA"
        android:layout_marginLeft="5dip"        
        android:width="170dip"
        android:textSize="12sp"
        android:textColor="#000"
        android:textStyle="bold"
    />
    <TextView
    	android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/CA_value"
        android:layout_alignBottom="@+id/CA_value"
        android:layout_marginLeft="30dip"
        android:width="70dip"
        android:textColor="#FF909090"
        android:text="@string/type"
    />
    <TextView
    	android:id="@+id/type_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/type"
        android:layout_alignBottom="@+id/type"
        android:layout_marginLeft="5dip"
        android:width="100dip"
        android:textSize="12sp"
        android:textColor="#000"
        android:textStyle="bold"
    />
    
    
    <TextView
    	android:id="@+id/certificate_validity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_below="@id/CA"
        android:layout_alignLeft="@+id/CA"
        android:width="90dip"
        android:textColor="#FF909090"
        android:text="@string/certificate_validity"
    />
    <TextView
    	android:id="@+id/certificate_validity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/certificate_validity"
        android:layout_alignBottom="@+id/certificate_validity"
        android:layout_marginLeft="5dip"        
        android:width="170dip"
        android:textSize="12sp"
        android:textColor="#000"
        android:textStyle="bold"
    />
    <TextView
    	android:id="@+id/use"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/certificate_validity_value"
        android:layout_alignTop="@+id/certificate_validity_value"
        android:layout_marginLeft="30dip"
        android:width="70dip"
        android:textColor="#FF909090"
        android:text="@string/use"
    />
    <TextView
    	android:id="@+id/use_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/use"
        android:layout_alignTop="@+id/use"
        android:layout_marginLeft="5dip"
        android:width="100dip"
        android:textSize="12sp"
        android:textColor="#000"
        android:textStyle="bold"
    />
    
    
    <TextView
    	android:id="@+id/publickeylength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:layout_below="@+id/use_value"
        android:layout_alignLeft="@id/certificate_validity"
        android:width="90dip"
        android:textColor="#FF909090"
        android:text="@string/publickeylength"
    />
    <TextView
    	android:id="@+id/publickeylength_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/publickeylength"
        android:layout_alignBottom="@+id/publickeylength"
        android:layout_marginLeft="5dip"
        android:textSize="12sp"
        android:textColor="#000"
        android:textStyle="bold"
    />
        
        
</RelativeLayout>