<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    
    <TextView
        android:id="@+id/blank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dip"
        android:paddingTop="20dip"
    />
    
    <TextView
    	android:id="@+id/card_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_toRightOf="@id/blank"
        android:layout_alignBottom="@id/blank"
        android:width="90dip"
        android:textColor="#FF909090"
        android:text="@string/card_data"
    />
    <TextView
    	android:id="@+id/card_data_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/card_data"
        android:layout_alignBottom="@+id/card_data"
        android:layout_marginLeft="5dip"  
        android:textSize="12sp"
        android:textColor="#000"
        android:textStyle="bold"
    />   
    
     
        
        
        
    
    
    <Button
        android:id="@+id/test_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_data"
        android:layout_marginTop="20dip"
		android:layout_alignLeft="@+id/card_data"
        android:gravity="center"
        android:textColor="#000"
        android:text="@string/test_pin"
    />
    
    
    <Button
        android:id="@+id/change_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/test_pin"
        android:layout_alignBottom="@+id/test_pin"
        android:layout_marginLeft="5dip"
        android:gravity="center"
        android:textColor="#000"
        android:text="@string/change_pin"
    />
    
    
    
        
        
</RelativeLayout>